fixed scrollbars appearing for offscreen divs

--- a/style.css
+++ b/style.css
@@ -21,12 +21,13 @@ html {
     font-size: 110%; }
 
 #query {
+  display: none;
   transition: opacity 500ms ease-in 500ms;
   text-align: center;
   margin: 0 auto;
   width: 60%;
   color: black;
-  transform: translateY(-250px); }
+  transform: translateY(-225px); }
 
 /*-------------------------Game Board--------------------------*/
 #board {
@@ -35,7 +36,7 @@ html {
   max-width: 90%;
   height: 600px;
   transition: transform 500ms ease-in-out 100ms;
-  display: flex; }
+  display: none; }
   #board h3 {
     text-align: center; }
   #board #drawingBoard {
